tests/xml/invalidxml/obsTime/badleaptime2.xml.README
badleaptime2.xml: BAD  obsTime since 1971-12-31T23:59:60 is not a real leap-second
